--- a/index.html
+++ b/index.html
@@ -202,5 +202,84 @@
     </div>
 </div>
 
+<div id="emailnews">
+  <div class="text">
+  <h4>Join our Subscribers</h4>
+  <h5>Get access to exclusive shop discounts  and news</h5>
+</div>
+<div>
+<div class="form-outline">
+  <input type="email" id="typeEmail" class="form-control" />
+  <label 
+  <!-- Default checkbox -->
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+      <label class="form-check-label" for="flexCheckDefault">I agree to subscribe to the newsletter. See our Privcy Policy</label>
+    </div>
+    </div>
+    </div>
+    <button type="button" class="btn btn-primary">Submit</button>
+    
+    
+</div>
+</div>
+
+<footer>
+<div class="sections">
+  <div><h6>About</h6>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+</div>
+</div>
+<div><h6>Help Centre</h6>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+</div>
+<div id="footerline"><img src="..//UX_UI_HW_21/images/footerline.png"></img></div>
+<div><h6>Shopping With US</h6>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+</div>
+<div><h6>Further Information</h6>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+  <li>copy</li>
+</div>
+<div><h6>Hobbies</h6>
+  <li><a href="#"> Beading</a></li>
+  <li>Crochet</li>
+  <li>Embroidery</li>
+  <li>Interior Decoration</li>
+  <li>Knitting</li>
+  <li>Tayloring</li>
+  
+</div>
+
+</div>
+
+
+
+</footer>
+<div class="socials">
+  <h6>Follow Us:</h6>
+  <img id="socialsimg" src="..//UX_UI_HW_21/images/socials.png">
+  </div>
+  <div id="credit">
+   
+    <p>ROGUE FASHION is a registered trademark of ROGUE FASHION Ltd.ROGUE FASHION Trading Limited is authorised and regulated by the Financial Conduct Authority. We are a credit broker and not a lender. PayPal Credit is a trading name of PayPal (Europe) S.à.r.l. et Cie, S.C.A., 22-24 Boulevard Royal L-2449, Luxembourg</p>
+  </div>
+<div class="creditimg" src="UX_UI_HW_21/images/credit.png">
+</div>
 </body>
 </html>
