--- a/index.html
+++ b/index.html
@@ -227,42 +227,43 @@
 <footer>
 <div class="sections">
   <div><h6>About</h6>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
+    <li><a href="#">Copy</a></li>
+    <li><a href="#">Copy</a></li>
+    <li><a href="#">Copy</a></li>
+    <li><a href="#">Copy</a></li>
 </div>
 </div>
 <div><h6>Help Centre</h6>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
 </div>
 <div id="footerline"><img src="..//UX_UI_HW_21/images/footerline.png"></img></div>
 <div><h6>Shopping With US</h6>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
 </div>
 <div><h6>Further Information</h6>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
-  <li>copy</li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  <li><a href="#">Copy</a></li>
+  
 </div>
 <div><h6>Hobbies</h6>
-  <li><a href="#"> Beading</a></li>
-  <li>Crochet</li>
-  <li>Embroidery</li>
-  <li>Interior Decoration</li>
-  <li>Knitting</li>
-  <li>Tayloring</li>
+  <li><a href="#">Beading</a></li>
+  <li><a href="#">Crochet</a></li>
+  <li><a href="#">Embroidery</a></li>
+  <li><a href="#">Interior Decoration</a></li>
+  <li><a href="#">Knitting</a></li>
+  <li><a href="#">Tayloring</a></li>
   
 </div>
 
@@ -273,13 +274,19 @@
 </footer>
 <div class="socials">
   <h6>Follow Us:</h6>
-  <img id="socialsimg" src="..//UX_UI_HW_21/images/socials.png">
-  </div>
+  <img id="facebook" src="..//UX_UI_HW_21/images/facebook.png">
+  
+  <img id="instagram" src="..//UX_UI_HW_21/images/instagram.png">
+  <img id="twitter" src="..//UX_UI_HW_21/images/twitter.png">
+  <img id="tiktok" src="..//UX_UI_HW_21/images/tiktok.png">
+  <img id="pin" src="..//UX_UI_HW_21/images/pin.png">
+  <img id="youtube" src="..//UX_UI_HW_21/images/youtube.png">
+</div>
   <div id="credit">
    
     <p>ROGUE FASHION is a registered trademark of ROGUE FASHION Ltd.ROGUE FASHION Trading Limited is authorised and regulated by the Financial Conduct Authority. We are a credit broker and not a lender. PayPal Credit is a trading name of PayPal (Europe) S.à.r.l. et Cie, S.C.A., 22-24 Boulevard Royal L-2449, Luxembourg</p>
-  </div>
-<div class="creditimg" src="UX_UI_HW_21/images/credit.png">
+  
+<img id="creditimg" src="..//UX_UI_HW_21/images/credit.png">
 </div>
 </body>
 </html>
