--- a/tipsandtricks/index.html
+++ b/tipsandtricks/index.html
@@ -11,6 +11,27 @@
     <link href="https://fonts.googleapis.com/css?family=Anton|Jura&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">  
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64SLXHBB1R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64SLXHBB1R');
+</script>
+<!-- Hotjar Tracking Code for https://erica1962.github.io/ux_ui_hw_21/ -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:3098974,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
     <title>UX/UI Homework 21 - Tips & Tricks</title>
 
 </head>
@@ -100,7 +121,7 @@
         <h2 class="main-post-title">
           <a href="#" class="anim-link">How to choose a sewing machine</a>
         </h2>
-        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae?</p>
+        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet.</p>
       <div class="hp-post-info">
         <span class="hpppi-author" >
           <a> <img src="..//images/avatar.png"> </a>
@@ -125,7 +146,7 @@
         <h2 class="main-post-title">
           <a href="#" class="anim-link">Pins & Needles</a>
         </h2>
-        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae?</p>
+        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet.</p>
       <div class="hp-post-info">
         <span class="hpppi-author" >
           <a> <img src="..//images/avatar.png"> </a>
@@ -151,7 +172,7 @@
         <h2 class="main-post-title">
           <a href="#" class="anim-link">Choosing Fabrics</a>
         </h2>
-        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae?</p>
+        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet.</p>
       <div class="hp-post-info">
         <span class="hpppi-author" >
           <a> <img src="..//images/avatar.png"> </a>
@@ -180,7 +201,7 @@
         <h2 class="main-post-title">
           <a href="#" class="anim-link">Thread Selection</a>
         </h2>
-        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae?</p>
+        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet.</p>
       <div class="hp-post-info">
         <span class="hpppi-author" >
           <a> <img src="..//images/avatar.png"> </a>
@@ -205,7 +226,7 @@
         <h2 class="main-post-title">
           <a href="#" class="anim-link">Hand Sewing</a>
         </h2>
-        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae?</p>
+        <p>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? "Lorem ipsum dolor sit amet.</p>
       <div class="hp-post-info">
         <span class="hpppi-author" >
           <a> <img src="..//images/avatar.png"> </a>
