--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
   <li><a href="#">Embroidery</a></li>
   <li><a href="#">Interior Decoration</a></li>
   <li><a href="#">Knitting</a></li>
-  <li><a href="#">Tayloring</a></li>
+  <li><a href="#">Tailoring</a></li>
   
 </div>
 
