--- a/relatedhobbies/index.html
+++ b/relatedhobbies/index.html
@@ -109,7 +109,7 @@
   <img src="..//relatedhobbies/images/taloring.png" class="card-img-top" alt="...">
  
   <div class="card-body">
-    <h3 class="cardheading">Taloring</h3>
+    <h3 class="cardheading">Tailoring</h3>
     <p class="card-text">Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? </p>
     <a href="#"><h4 class="Readmore"> Read More</h4></a>
   </div>
@@ -220,7 +220,7 @@
     <li><a href="#">Embroidery</a></li>
     <li><a href="#">Interior Decoration</a></li>
     <li><a href="#">Knitting</a></li>
-    <li><a href="#">Tayloring</a></li>
+    <li><a href="#">Tailoring</a></li>
     
   </div>
   
