--- a/tipsandtricks/index.html
+++ b/tipsandtricks/index.html
@@ -339,7 +339,7 @@
   <li><a href="#">Embroidery</a></li>
   <li><a href="#">Interior Decoration</a></li>
   <li><a href="#">Knitting</a></li>
-  <li><a href="#">Tayloring</a></li>
+  <li><a href="#">Tailoring</a></li>
   
 </div>
 
