--- a/index.html
+++ b/index.html
@@ -274,13 +274,12 @@
 </footer>
 <div class="socials">
   <h6>Follow Us:</h6>
-  <img id="facebook" src="..//UX_UI_HW_21/images/facebook.png">
-  
-  <img id="instagram" src="..//UX_UI_HW_21/images/instagram.png">
-  <img id="twitter" src="..//UX_UI_HW_21/images/twitter.png">
-  <img id="tiktok" src="..//UX_UI_HW_21/images/tiktok.png">
-  <img id="pin" src="..//UX_UI_HW_21/images/pin.png">
-  <img id="youtube" src="..//UX_UI_HW_21/images/youtube.png">
+  <a href="#"> <img id="facebook" src="../images/facebook.png"></a>
+  <a href="#"> <img id="instagram" src="../images/instagram.png"></a>
+  <a href="#"> <img id="twitter" src="../images/twitter.png"></a>
+  <a href="#"> <img id="tiktok" src="../images/tiktok.png"></a>
+  <a href="#"> <img id="pin" src="../images/pin.png"></a>
+  <a href="#"> <img id="youtube" src="../images/youtube.png"></a>
 </div>
   <div id="credit">
    
