--- a/relatedhobbies/index.html
+++ b/relatedhobbies/index.html
@@ -231,13 +231,12 @@
   </footer>
   <div class="socials">
     <h6>Follow Us:</h6>
-    <img id="facebook" src="../images/facebook.png">
-    
-    <img id="instagram" src="../images/instagram.png">
-    <img id="twitter" src="../images/twitter.png">
-    <img id="tiktok" src="../images/tiktok.png">
-    <img id="pin" src="../images/pin.png">
-    <img id="youtube" src="../images/youtube.png">
+    <a href="#"> <img id="facebook" src="../images/facebook.png"></a>
+    <a href="#"> <img id="instagram" src="../images/instagram.png"></a>
+    <a href="#"> <img id="twitter" src="../images/twitter.png"></a>
+    <a href="#"> <img id="tiktok" src="../images/tiktok.png"></a>
+    <a href="#"> <img id="pin" src="../images/pin.png"></a>
+    <a href="#"> <img id="youtube" src="../images/youtube.png"></a>
   </div>
     <div id="credit">
      
