--- a/tipsandtricks/index.html
+++ b/tipsandtricks/index.html
@@ -271,16 +271,17 @@
     </div>
   </div>
     <div class="form-groupright">
-      <label for="exampleFormControlTextarea1">Example textarea</label>
+      <label for="exampleFormControlTextarea1">Question</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
+    <button type="button" class="btn btn-primary">Submit</button>
   </div>
   </form>
 
 <div id="emailnews">
   <div class="text">
   <h4>Join our Subscribers</h4>
-  <h5>Get access to exclusive shop discounts  and news</h5>
+  <h5>Get access to exclusive shop discounts and news</h5>
 </div>
 <div>
 <div class="form-outline">
@@ -350,13 +351,13 @@
 </footer>
 <div class="socials">
   <h6>Follow Us:</h6>
-  <img id="facebook" src="../images/facebook.png">
+  <a href="#"> <img id="facebook" src="../images/facebook.png"></a>
   
-  <img id="instagram" src="../images/instagram.png">
-  <img id="twitter" src="../images/twitter.png">
-  <img id="tiktok" src="../images/tiktok.png">
-  <img id="pin" src="../images/pin.png">
-  <img id="youtube" src="../images/youtube.png">
+  <a href="#"> <img id="instagram" src="../images/instagram.png"></a>
+  <a href="#"> <img id="twitter" src="../images/twitter.png"></a>
+  <a href="#"> <img id="tiktok" src="../images/tiktok.png"></a>
+  <a href="#"> <img id="pin" src="../images/pin.png"></a>
+  <a href="#"> <img id="youtube" src="../images/youtube.png"></a>
 </div>
   <div id="credit">
    
