Need Help section
Improved need help section

--- a/tipsandtricks/index.html
+++ b/tipsandtricks/index.html
@@ -253,19 +253,19 @@
 </article>
 
 
-<section id="needhelp"></section>
+<section id="needhelp">
 <div id="questionsection">
   <h4>Needing Help?</h4>
   <h5>We are here to answer your questions</h5>
   <h5>Send us a question and our Tips & Tricks experters will find the answer</h5>
-  
+</div>
   <form>
     <div class="Qsection">
-    <div class="form-groupleft">
+    <div class="form-groupleft top">
       <label for="exampleFormControlInput1">Name</label>
       <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="First Last">
     
-    <div class="form-groupleft">
+    <div class="form-groupleft bottom">
       <label for="exampleFormControlInput1">Email address</label>
       <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
     </div>
@@ -277,7 +277,7 @@
     <button type="button" class="btn btn-primary">Submit</button>
   </div>
   </form>
-
+</section>
 <div id="emailnews">
   <div class="text">
   <h4>Join our Subscribers</h4>
@@ -352,7 +352,6 @@
 <div class="socials">
   <h6>Follow Us:</h6>
   <a href="#"> <img id="facebook" src="../images/facebook.png"></a>
-  
   <a href="#"> <img id="instagram" src="../images/instagram.png"></a>
   <a href="#"> <img id="twitter" src="../images/twitter.png"></a>
   <a href="#"> <img id="tiktok" src="../images/tiktok.png"></a>
