--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
     <div id="article-header-wrap">
       <div id="article-header">
-        <div class="content-block ah-cim-img" style="background-image:url(images/gettingstartedimg.png)">
+        <div class="content-block ah-cim-img" style="background-image:url(images/gettingstartedimg.png)" alt="Getting Started in Sewing">
         
           <div class="single-title-im-wrap">
           <div class="single-title-im-content clearfix">
@@ -103,7 +103,7 @@
 <p class="fixed-empty-p>&nbsp;"></p>
                 <h2>Set Goals</h2>
                 <h3>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? </h3>
-                <div class="contentimage"><img src="images/goals.png">
+                <div class="contentimage"><img src="images/goals.png" alt="Set Goals">
 </div>
                 </div>
             
@@ -124,7 +124,7 @@
 <p class="fixed-empty-p>&nbsp;"></p>
                 <h2>Research</h2>
                 <h3>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? </h3>
-                <div class="contentimage"><img src="images/research.png">
+                <div class="contentimage"><img src="images/research.png" alt="Research">
                 </div>
 
                 </div>
@@ -146,7 +146,7 @@
 <p class="fixed-empty-p>&nbsp;"></p>
                 <h2>Invest</h2>
                 <h3>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? </h3>
-                <div class="contentimage"><img src="images/invest.png">
+                <div class="contentimage"><img src="images/invest.png" alt="Invest">
                 </div>
 
                 </div>
@@ -168,7 +168,7 @@
 <p class="fixed-empty-p>&nbsp;"></p>
                 <h2>Learn</h2>
                 <h3>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? </h3>
-                <div class="contentimage"><img src="images/learn.png">
+                <div class="contentimage"><img src="images/learn.png" alt="Learn">
                 </div>
 
                 </div>
@@ -190,7 +190,7 @@
 <p class="fixed-empty-p>&nbsp;"></p>
                 <h2>Create</h2>
                 <h3>Lorem ipsum dolor sit amet. Id quae omnis et labore galisum ea quis reiciendis et omnis voluptatibus aut ratione debitis qui rerum debitis est asperiores vitae. Id magni dolorem nam fugiat nulla et consectetur sapiente ut quas beatae? </h3>
-                <div class="contentimage"><img src="images/create.png">
+                <div class="contentimage"><img src="images/create.png" alt="Create">
                 </div>
 
                 </div>
