--- a/relatedhobbies/index.html
+++ b/relatedhobbies/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anton|Jura&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="..//relatedhobbies/index.css">  
 
-    <title>UX/UI Homework 21 - Tips & Tricks</title>
+    <title>UX/UI Homework 21 - Related Hobbies</title>
 
 </head>
 
@@ -61,7 +61,7 @@
   </div>
     <div id="article-header-wrap">
       <div id="article-header">
-        <div class="content-block ah-cim-img" style="background-image:url(..//relatedhobbies/images/relatedhobbiesbackground.png)">
+        <div class="content-block ah-cim-img" style="background-image:url(..//relatedhobbies/images/relatedhobbiesbackground.png)" alt="Related Hobbies">
         
           <div class="single-title-im-wrap">
           <div class="single-title-im-content clearfix">
@@ -96,7 +96,7 @@
 <div class="content">
 
 <div class="card" style="width: 18rem;">
-  <img src="..//relatedhobbies/images/embroidery.png" class="card-img-top" alt="...">
+  <img src="..//relatedhobbies/images/embroidery.png" class="card-img-top" alt="Embroidery">
  
   <div class="card-body">
     <h3 class="cardheading">Embroidery</h3>
@@ -106,7 +106,7 @@
 </div>
 
 <div class="card" style="width: 18rem;">
-  <img src="..//relatedhobbies/images/taloring.png" class="card-img-top" alt="...">
+  <img src="..//relatedhobbies/images/taloring.png" class="card-img-top" alt="Tailoring">
  
   <div class="card-body">
     <h3 class="cardheading">Tailoring</h3>
@@ -116,7 +116,7 @@
 </div>
 
   <div class="card" style="width: 18rem;">
-    <img src="..//relatedhobbies/images/interiordecoration.png" class="card-img-top" alt="...">
+    <img src="..//relatedhobbies/images/interiordecoration.png" class="card-img-top" alt="Interior Decoration">
    
     <div class="card-body">
       <h3 class="cardheading">Interior Decoration</h3>
@@ -129,7 +129,7 @@
 <div class="content">
  
   <div class="card" style="width: 18rem;">
-    <img src="..//relatedhobbies/images/crochet.png" class="card-img-top" alt="...">
+    <img src="..//relatedhobbies/images/crochet.png" class="card-img-top" alt="Crochet">
    
     <div class="card-body">
       <h3 class="cardheading">Crochet</h3>
@@ -139,7 +139,7 @@
   </div>
   
   <div class="card" style="width: 18rem;">
-    <img src="..//relatedhobbies/images/knitting.png" class="card-img-top" alt="...">
+    <img src="..//relatedhobbies/images/knitting.png" class="card-img-top" alt="Knitting">
    
     <div class="card-body">
       <h3 class="cardheading">Knitting</h3>
@@ -149,7 +149,7 @@
   </div>
   
     <div class="card" style="width: 18rem;">
-      <img src="..//relatedhobbies/images/beading.png" class="card-img-top" alt="...">
+      <img src="..//relatedhobbies/images/beading.png" class="card-img-top" alt="Beading">
      
       <div class="card-body">
         <h3 class="cardheading">Beading</h3>
@@ -231,7 +231,7 @@
   </footer>
   <div class="socials">
     <h6>Follow Us:</h6>
-    <a href="#"> <img id="facebook" src="../images/facebook.png"></a>
+    <a href="#"> <img id="facebook" src="../images/facebook.png"> </a>
     <a href="#"> <img id="instagram" src="../images/instagram.png"></a>
     <a href="#"> <img id="twitter" src="../images/twitter.png"></a>
     <a href="#"> <img id="tiktok" src="../images/tiktok.png"></a>
