--- a/index.html
+++ b/index.html
@@ -288,4 +288,6 @@
 <img id="creditimg" src="..//UX_UI_HW_21/images/credit.png">
 </div>
 </body>
+
+<script src="../UX_UI_HW_21/js/index.js"></script>
 </html>
