Fix footer social icons

--- a/tipsandtricks/index.html
+++ b/tipsandtricks/index.html
@@ -351,7 +351,7 @@
 </footer>
 <div class="socials">
   <h6>Follow Us:</h6>
-  <a href="#"> <img id="facebook" src="../images/facebook.png"></a>
+  <a href="#"> <img id="facebook" src="UX_UI_HW_21/images/facebook.png"></a>
   <a href="#"> <img id="instagram" src="../images/instagram.png"></a>
   <a href="#"> <img id="twitter" src="../images/twitter.png"></a>
   <a href="#"> <img id="tiktok" src="../images/tiktok.png"></a>
