--- a/index.html
+++ b/index.html
@@ -288,6 +288,6 @@
 <img id="creditimg" src="..//UX_UI_HW_21/images/credit.png">
 </div>
 </body>
-
+<script src="../Hobbie Site/index.js"></script>
 
 </html>
