--- a/relatedhobbies/index.html
+++ b/relatedhobbies/index.html
@@ -245,4 +245,6 @@
   <img id="creditimg" src="../images/credit.png">
   </div>
   </body>
+
+  <script src="../Hobbie Site/index.js"></script>
 </html>
